--- a/doublekit-project-h5-ce/src/modules/project/project/components/project.scss
+++ b/doublekit-project-h5-ce/src/modules/project/project/components/project.scss
@@ -14,6 +14,11 @@
             display: flex;
             justify-content: space-between;
             margin: 10px 0;
+            background: #fff;
+        }
+        .project-box {
+            height: calc(100vh - 140px);
+            overflow: auto;
         }
         .project-list {
             display: flex;
