加入富文本

--- a/doublekit-project-h5-ce/src/modules/project/workItem/components/workItemAdd.scss
+++ b/doublekit-project-h5-ce/src/modules/project/workItem/components/workItemAdd.scss
@@ -4,7 +4,7 @@
         position: relative;
         width: 50px;
         height: 40px;
-        input {
+        .upload-file {
             opacity: 0;
             width: 50px;
             height: 40px;
