--- a/tiklab-teamwire-h5-ce/src/modules/project/sprint/components/sprint.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/project/sprint/components/sprint.scss
@@ -4,6 +4,19 @@
         
     }
     .sprint {
+        background-color: #fff;
+        .sprint-search {
+            span {
+                height: 80px;
+                line-height: 80px;
+            }
+            padding: 0 20px;
+            font-weight: 600;
+            display: flex;
+            justify-content: space-between;
+            padding: 10px;
+            background-color: #fff;
+        }
         .title {
             span {
                 height: 80px;
