--- a/tiklab-teamwire-h5-ce/src/modules/project/workItem/components/workItemAdd.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/project/workItem/components/workItemAdd.scss
@@ -25,6 +25,10 @@
             font-size: 25px;
         }
     }
+   
+}
+.desc-addbutton {
+    margin: 10px 0;
 }
 .show-file {
     transition: all 0.3s ease 0s;
