--- a/tiklab-teamwire-h5-ce/src/modules/home/components/recentProject.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/home/components/recentProject.scss
@@ -1,9 +1,9 @@
-.project {
+.recent-project {
     .title-top {
         font-size: 14px;
         
     }
-    .project-top {
+    .recent-project-top {
         height: 50px;
         display: flex;
         justify-content: space-between;
@@ -12,31 +12,31 @@
         background-color: #fff;
         box-shadow: var(--ds-shadow-overlay, 0 0 1px rgba(9, 30, 66, 0.31), 0 5px 10px -8px rgba(9, 30, 66, 0.25));
     
-        .project-top-left, .project-top-right {
+        .recent-project-top-left, .recent-project-top-right {
             display: flex;
             justify-content: space-between;
             align-items: center;
             font-size: 18px;
         }
-        .project-icon-logo {
+        .recent-project-icon-logo {
             width: 20px;
             height: 20px;
         }
-        .project-title {
+        .recent-project-title {
             font-weight: 600;
             font-size: 16px;
         }
-        .project-icon-search {
+        .recent-project-icon-search {
             margin-right: 20px;
             width: 25px;
             height: 25px;
         }
-        .project-icon-add {
+        .recent-project-icon-add {
             width: 25px;
             height: 25px;
         }
     }
-    .project-content {
+    .recent-project-content {
         .title {
             span {
                 height: 80px;
@@ -49,11 +49,11 @@
             margin: 10px 0;
             background: #fff;
         }
-        .project-box {
+        .recent-project-box {
             height: calc(100vh - 140px);
             overflow: auto;
         }
-        .project-list {
+        .recent-project-list {
             display: flex;
             width: 100vw;
             justify-content: space-between;
@@ -62,22 +62,20 @@
             box-sizing: border-box;
             border-top: solid 1px var(--adm-border-color);
             line-height: 50px;
-            .project-left {
+            .recent-project-left {
                 display: flex;
                 justify-content: flex-start;
                 align-items: center;
-                width: 30vw;
-                .project-icon {
+                .recent-project-icon {
                     margin-right: 10px;
                 }
             }
-            .project-type {
-                width: 20vw;
+            .recent-project-type {
                 height: 40px; 
                 line-height: 40px;
                 overflow: hidden;
             }
-            .project-title {
+            .recent-project-title {
                 font-size: 16px;
                 font-weight: 600;
                 color: var(--adm-color-primary)
