--- a/tiklab-teamwire-h5-ce/src/modules/project/common/projectDeailTab.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/project/common/projectDeailTab.scss
@@ -1,6 +1,8 @@
-.adm-tabs-tab {
-    font-size: 13px;
-}
-.adm-tabs-content {
-    background-color: rgb(244, 245, 247);
+.project-detail {
+    .adm-tabs-tab {
+        font-size: 13px;
+    }
+    .adm-tabs-content {
+        background-color: rgb(244, 245, 247);
+    }
 }
