--- a/tiklab-teamwire-h5-ce/src/modules/home/components/projectTabBar.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/home/components/projectTabBar.scss
@@ -3,4 +3,9 @@
     bottom: 0;
     width: 100vw;
     border-top: solid 1px var(--adm-border-color);
+    background-color: #fff;
+}
+.tabbar-icon {
+    width: 20px;
+    height: 20px;
 }
