--- a/tiklab-teamwire-h5-ce/src/modules/home/components/home.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/home/components/home.scss
@@ -1,22 +1,14 @@
-.sprint {
-    .sprint-detail {
-        padding: 0 10px;
+.home {
+    .adm-tabs-tab {
+        font-size: 13px;
     }
-
-    .sprint-info-item {
-        display: flex;
-        justify-content: space-between;
-        height: 40px;
-        line-height: 40px;
-        border-bottom: 1px solid #f7f7f7;
-
-        :nth-child(1) {
-            font-weight: 600;
-            width: 200px;
-        }
+    .adm-tabs-content {
+        background-color: rgb(244, 245, 247);
     }
-
-    .sprint-detail-top {
+    .recent-home {
+        background-color: #fff;
+    }
+    .home-top {
         height: 50px;
         display: flex;
         justify-content: space-between;
@@ -24,23 +16,29 @@
         padding: 0 10px;
         background-color: #fff;
         box-shadow: var(--ds-shadow-overlay, 0 0 1px rgba(9, 30, 66, 0.31), 0 5px 10px -8px rgba(9, 30, 66, 0.25));
-
-        .sprint-detail-top-left {
+    
+        .home-top-left, .home-top-right {
             display: flex;
             justify-content: space-between;
             align-items: center;
             font-size: 18px;
         }
-
-        .sprint-detail-icon-logo {
+        .home-icon-logo {
             width: 20px;
             height: 20px;
         }
-
-        .sprint-detail-title {
+        .home-title {
             font-weight: 600;
             font-size: 16px;
         }
+        .home-icon-search {
+            margin-right: 20px;
+            width: 25px;
+            height: 25px;
+        }
+        .home-icon-add {
+            width: 25px;
+            height: 25px;
+        }
     }
-
 }
