--- a/tiklab-teamwire-h5-ce/src/modules/project/workItem/components/workChild.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/project/workItem/components/workChild.scss
@@ -1,25 +1,52 @@
-.work-child {
-    .child-top {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 10px;
-        &-title {
-            font-size: 16px;
-            font-weight: 500;
-        }
+.workChild {
+    .workChild-search {
+        padding: 10px;
+        background-color: #fff;
     }
-}
-.work-child-search {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-}
-
-.ant-modal.work-child-addmodel {
-    top: 30px;
-    .ant-table {
-        height: calc(100vh - 340px);
+    .workChild-content {
+        background: #fff;
+        border-radius: 5px;
+        height: calc(100vh - 200px);
         overflow: auto;
+        .title {
+            span {
+                height: 80px;
+                line-height: 80px;
+            }
+            padding: 0 20px;
+            font-weight: 600;
+            display: flex;
+            justify-content: space-between;
+            margin: 10px 0;
+        }
+        .workChild-list {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            box-sizing: border-box;
+            line-height: 30px;
+            
+            .workChild-left {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                width: 30vw;
+                .workChild-icon {
+                    margin-right: 10px;
+                }
+            }
+            .workChild-time {
+                height: 40px; 
+                line-height: 40px;
+                overflow: hidden;
+            }
+            .workChild-title {
+                font-size: 16px;
+                font-weight: 600;
+                color: var(--adm-color-primary)
+            }
+        }
+       
     }
 }
