--- a/tiklab-teamwire-h5-ce/src/modules/project/workItem/components/workItemDetail.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/project/workItem/components/workItemDetail.scss
@@ -1,3 +1,9 @@
+.workItem-detail {
+    .adm-tabs-content {
+        height: calc(100vh - 150px);
+        overflow: auto;
+    }
+}
 .workItem-info-item {
     display: flex;
     justify-content: space-between;
@@ -8,7 +14,24 @@
         width: 200px;
     }
 }
+.workItem-detail-top {
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    background-color: #fff;
+    box-shadow: var(--ds-shadow-overlay, 0 0 1px rgba(9, 30, 66, 0.31), 0 5px 10px -8px rgba(9, 30, 66, 0.25));
 
+    .workItem-detail-icon-logo {
+        width: 30px;
+        height: 30px;
+    }
+    .workItem-detail-title {
+        font-weight: 600;
+        font-size: 16px;
+    }
+}
 .upload {
     // padding-left: 16px;
     .uplpad-list {
@@ -56,8 +79,5 @@
 .workItem-detail {
     .adm-tabs-tab {
         font-size: 13px;
-    }
-    .adm-tabs-content {
-        background-color: rgb(244, 245, 247);
     }
 }
