--- a/tiklab-teamwire-h5-ce/src/modules/projectSet/components/projectSet.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/projectSet/components/projectSet.scss
@@ -1,20 +1,43 @@
-.home {
-    .title-top {
-        font-size: 14px;
-        
+.projectset {
+    .projectset-top {
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 10px;
+        background-color: #fff;
+        box-shadow: var(--ds-shadow-overlay, 0 0 1px rgba(9, 30, 66, 0.31), 0 5px 10px -8px rgba(9, 30, 66, 0.25));
+    
+        .projectset-top-left {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 18px;
+        }
+        .projectset-icon-logo {
+            width: 20px;
+            height: 20px;
+        }
+        .projectset-title {
+            font-weight: 600;
+            font-size: 16px;
+        }
     }
-    .projectset {
+    .projectset-content {
         .title {
-            span {
-                height: 80px;
-                line-height: 80px;
-            }
             padding: 0 10px;
             font-weight: 600;
             display: flex;
             justify-content: space-between;
             margin: 10px 0;
             background: #fff;
+            .adm-search-bar  {
+                flex: 1;
+                margin-right: 10px;
+                .adm-input {
+                    font-size: 13px;
+                }
+            }
         }
         .projectset-box {
             height: calc(100vh - 140px);
@@ -50,10 +73,5 @@
             }
         }
     }
-    .adm-search-bar  {
-        width: 63vw;
-        .adm-input {
-            font-size: 13px;
-        }
-    }
+    
 }
