--- a/tiklab-teamwire-h5-ce/src/modules/project/statistics/components/statisticsBulidAndEndWork.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/project/statistics/components/statisticsBulidAndEndWork.scss
@@ -24,6 +24,8 @@
     }
     .statistics-buidlend-content{
         padding: 10px;
+        height: calc(100vh - 100px);
+        overflow: auto;
     }
     .statistics-buidlend-filter {
 
