--- a/tiklab-teamwire-h5-ce/src/modules/project/sprint/components/sprint.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/project/sprint/components/sprint.scss
@@ -1,68 +1,29 @@
-.home {
-    .title-top {
-        font-size: 14px;
-        
+.sprint {
+    .adm-tabs-tab {
+        font-size: 13px;
     }
-    .sprint {
+    .adm-tabs-content {
+        background-color: rgb(244, 245, 247);
+    }
+    .recent-sprint {
         background-color: #fff;
-        .sprint-search {
-            span {
-                height: 80px;
-                line-height: 80px;
-            }
-            padding: 0 20px;
-            font-weight: 600;
-            display: flex;
-            justify-content: space-between;
-            padding: 10px;
-            background-color: #fff;
-        }
-        .title {
-            span {
-                height: 40px;
-                line-height: 40px;
-            }
-            padding: 0 20px;
-            font-weight: 600;
-            display: flex;
-            justify-content: space-between;
-            margin: 10px 0;
-        }
-        .sprint-list {
-            display: flex;
-            // width: 100vw;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            box-sizing: border-box;
-            border-top: solid 1px var(--adm-border-color);
-            line-height: 40px;
-            .sprint-left {
-                display: flex;
-                justify-content: flex-start;
-                align-items: center;
-                width: 30vw;
-                .sprint-icon {
-                    margin-right: 10px;
-                }
-            }
-            .sprint-type {
-                width: 20vw;
-                height: 40px; 
-                line-height: 40px;
-                overflow: hidden;
-            }
-            .sprint-title {
-                font-size: 16px;
-                font-weight: 600;
-                color: var(--adm-color-primary)
-            }
-        }
     }
-    .adm-search-bar  {
-        width: 70vw;
-        .adm-input {
-            font-size: 13px;
+    .sprint-top {
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 10px;
+        background-color: #fff;
+        box-shadow: var(--ds-shadow-overlay, 0 0 1px rgba(9, 30, 66, 0.31), 0 5px 10px -8px rgba(9, 30, 66, 0.25));
+
+        .sprint-icon-logo {
+            width: 30px;
+            height: 30px;
+        }
+        .sprint-title {
+            font-weight: 600;
+            font-size: 16px;
         }
     }
 }
