--- a/tiklab-teamwire-h5-ce/src/modules/project/workItem/components/workComment.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/project/workItem/components/workComment.scss
@@ -6,6 +6,8 @@
         .comment-text {
             border-radius: 5px;
             border: 0.5px solid #d7d7d7;
+            padding: 10px;
+            box-sizing: border-box;
         }
         .comment-submit {
             margin-top: 10px;
