--- a/tiklab-teamwire-h5-ce/src/modules/project/workItem/components/workItemDesc.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/project/workItem/components/workItemDesc.scss
@@ -7,7 +7,11 @@
     margin: 0 10px;
     justify-content: space-between;
     .back-icon {
-        width: 15px;
-        height: 15px;
+        width: 30px;
+        height: 20px;
+    }
+    .workItemDesc-name {
+        font-size: 14px;
+        font-weight: 500;
     }
 }
