--- a/tiklab-teamwire-h5-ce/src/modules/systemSet/components/projectType.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/systemSet/components/projectType.scss
@@ -1,4 +1,22 @@
 .projectType {
+    .projectType-top {
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 10px;
+        background-color: #fff;
+        box-shadow: var(--ds-shadow-overlay, 0 0 1px rgba(9, 30, 66, 0.31), 0 5px 10px -8px rgba(9, 30, 66, 0.25));
+    
+        .projectType-title {
+            font-weight: 600;
+            font-size: 16px;
+        }
+        .projectType-icon-logo {
+            width: 30px;
+            height: 30px;
+        }
+    }
     .projectType-content {
         .projectType-box {
             height: calc(100vh - 140px);
