--- a/tiklab-teamwire-h5-ce/src/modules/systemSet/components/workPriorityList.scss
+++ b/tiklab-teamwire-h5-ce/src/modules/systemSet/components/workPriorityList.scss
@@ -1,4 +1,22 @@
 .workPriority {
+    .workPriority-top {
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 10px;
+        background-color: #fff;
+        box-shadow: var(--ds-shadow-overlay, 0 0 1px rgba(9, 30, 66, 0.31), 0 5px 10px -8px rgba(9, 30, 66, 0.25));
+    
+        .workPriority-title {
+            font-weight: 600;
+            font-size: 16px;
+        }
+        .workPriority-icon-logo {
+            width: 30px;
+            height: 30px;
+        }
+    }
     .workPriority-content {
         .workPriority-box {
             height: calc(100vh - 140px);
