--- a/tiklab-teamwire-h5-ce/src/common/styles/_base.scss
+++ b/tiklab-teamwire-h5-ce/src/common/styles/_base.scss
@@ -16,7 +16,7 @@ $font-family-sans-serif: "Poppins";
 $font-family-base: $font-family-sans-serif;
 
 
-$font-size-base: 1rem; // Assumes the browser default, typically `16px`
+$font-size-base: 1rem; 
 $font-size-lg: $font-size-base * 1.75;
 $font-size-sm: $font-size-base * 0.875;
 $font-size-xs: $font-size-base * 0.75;
