--- a/src/project/setting/basicInfo/components/BasicInfo.scss
+++ b/src/project/setting/basicInfo/components/BasicInfo.scss
@@ -4,7 +4,12 @@
     color: var(--tiklab-blue);
 }
 
-
+.project-info-title {
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    font-weight: 600;
+}
 .project-set-basicinfo {
     padding: 10px;
     .project-set-title {
@@ -14,7 +19,6 @@
         margin-bottom: 10px;
     }
     .project-set-icon {
-        border-bottom: 1px solid #d9d9d9;
         .project-form-icon {
             align-items: center;
         }
