--- a/src/common/UserIcon/UserIcon.scss
+++ b/src/common/UserIcon/UserIcon.scss
@@ -1,4 +1,16 @@
 .user-icon {
+    width: 16px;
+    height: 16px;
+    border-radius: 16px;
+    background-color: #ddd;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+.user-big-icon {
     width: 25px;
     height: 25px;
     border-radius: 25px;
