--- a/src/common/button/button.scss
+++ b/src/common/button/button.scss
@@ -7,6 +7,7 @@
     cursor: pointer;
     height: 32px;
     line-height: 32px;
+    width: fit-content;
 }
 .project-primary {
     background-color: var(--tiklab-blue);
