--- a/src/projectSet/projectSet/components/ProjectSet.scss
+++ b/src/projectSet/projectSet/components/ProjectSet.scss
@@ -17,7 +17,7 @@
     .projectSet-filter {
         display: flex;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: space-between;
         height: 50px;
         line-height: 50px;
         gap: 20px;
