--- a/src/work/components/WorkTable.scss
+++ b/src/work/components/WorkTable.scss
@@ -24,10 +24,10 @@
         }
     }
     .work-status {
-        padding: 5px 6px;
-        background: #eaedf1cf;
+        padding: 2px 3px;
+        background: #ddd;
         border-radius: 4px;
-        font-size: 13px;
+        font-size: 10px;
         width: fit-content;
         color: #fff;
     }
