--- a/src/project/workLog/components/LogDetail.scss
+++ b/src/project/workLog/components/LogDetail.scss
@@ -1,3 +1,8 @@
+.log-detail-drawer {
+    .ant-drawer-content-wrapper {
+        top: 48px;
+    }
+}
 .log-detail {
     .log-detail-item {
         line-height: 25px;
