--- a/src/projectSet/setting/common/components/ProjectSetSettingDetailAside.scss
+++ b/src/projectSet/setting/common/components/ProjectSetSettingDetailAside.scss
@@ -48,6 +48,7 @@
         width: 100%;
         align-items: center;
         padding: 0 20px;
+        font-weight: 600;
         span{
             width: 100px;
             height: 100%;
