--- a/src/project/milestone/components/MilestoneTimeline.scss
+++ b/src/project/milestone/components/MilestoneTimeline.scss
@@ -40,6 +40,8 @@
             padding: 0 10px;
             max-width: 200px;
             min-width: 100px;
+            width: 200px;
+            text-align: center;
         }
 
         .timeline-item-first {
