--- a/src/projectSet/projectSet/components/ProjectSet.scss
+++ b/src/projectSet/projectSet/components/ProjectSet.scss
@@ -65,6 +65,7 @@
         .active-tabs {
             font-weight: var(--tiklab-font-weight-bold);
             color: #000;
+            border-bottom: 2px solid var(--tiklab-blue);
         }
     }
     .projectSet-content {
