--- a/src/statistics/components/Statistics.scss
+++ b/src/statistics/components/Statistics.scss
@@ -20,7 +20,7 @@
             }
 
             .ant-form {
-                padding-top: 15px;
+                padding: 15px 0;
             }
         }
 
