--- a/src/projectSet/statistics/components/ProjectSetStatistics.scss
+++ b/src/projectSet/statistics/components/ProjectSetStatistics.scss
@@ -20,7 +20,7 @@
             }
 
             .ant-form {
-                padding-top: 15px;
+                padding: 15px 0;
             }
         }
 
@@ -28,6 +28,9 @@
             padding: 0 15px 15px 15px;
             .statistics-work-table {
                 padding: 15px 0;
+            }
+            .statistics-work-bar {
+                box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
             }
         }
 
