--- a/src/work/components/WorkTypeTab.scss
+++ b/src/work/components/WorkTypeTab.scss
@@ -3,7 +3,7 @@
     gap: 15px;
     height: 42px;
     line-height: 42px;
-    justify-content: flex-start;
+    justify-content: space-between;
     .tabs-bar-select {
         border-bottom: 2px solid var(--tiklab-blue);
         color: var(--tiklab-blue);
@@ -11,7 +11,7 @@
     
     .tabs-bar  {
         cursor: pointer;
-        padding: 0 15px;
+        padding: 0 10px;
     }
     .tabs-more {
         position: relative;
