--- a/src/home/common/components/HomePage.scss
+++ b/src/home/common/components/HomePage.scss
@@ -1,4 +1,3 @@
-
 .home {
     height: calc(100vh - var(--tiklab-head-height));
     overflow: auto;
@@ -6,6 +5,7 @@
     position: relative;
     z-index: 0;
     padding: 0 20px;
+
     .home-tab {
         display: flex;
         gap: 30px;
@@ -17,17 +17,21 @@
         top: 0;
         background: var(--tiklab-gray-600);
         z-index: 1;
+
         .home-tab-item {
             cursor: pointer;
         }
+
         .home-tab-select {
             font-weight: var(--tiklab-font-weight-bold);
             border-bottom: 2px solid var(--tiklab-blue);
         }
     }
+
     .home-content {
         background: var(--tiklab-gray-600);
     }
+
     .title {
         width: 100%;
         height: 40px;
@@ -35,12 +39,15 @@
         border-radius: 4px;
         display: inline-flex;
         justify-content: space-between;
+
         .name {
             font-weight: var(--tiklab-font-weight-bold);
         }
-        .more:hover{
-            text-decoration:underline;
+
+        .more:hover {
+            text-decoration: underline;
         }
+
         .more {
             color: var(--tiklab-blue);
             cursor: pointer;
@@ -48,11 +55,13 @@
             align-items: center;
         }
     }
-    .upper-box {
+
+    .recent-project {
         overflow: hidden;
         background-color: #fff;
         border-radius: 4px;
         padding: 0 10px 10px;
+
         .home-project {
             display: flex;
             align-items: center;
@@ -60,11 +69,13 @@
             overflow: auto;
             gap: 20px;
             padding-bottom: 10px;
+
             .project-item:hover {
                 border-radius: 4px 4px 0 0;
                 border-bottom: 2px solid var(--tiklab-blue);
                 transition: 500;
             }
+
             .project-item {
                 width: 240px;
                 padding: 15px;
@@ -75,28 +86,34 @@
                 background-color: var(--tiklab-gray-600);
                 box-sizing: border-box;
                 border-bottom: 2px solid var(--tiklab-gray-600);
+
                 .item-title {
                     margin-bottom: 10px;
                     font-weight: var(--tiklab-font-weight-bold);
                     display: inline-flex;
                     align-items: center;
                     font-size: 16px;
+
                     .project-icon {
                         width: 30px;
                         height: 30px;
                         margin-right: 10px;
                     }
+
                     .item-icon {
                         width: 20px;
                         height: 20px;
-                        margin-right: 10px; 
+                        margin-right: 10px;
                     }
                 }
+
                 .item-work {
                     display: flex;
                     gap: 20px;
                 }
-                .process-work, .end-work{
+
+                .process-work,
+                .end-work {
                     font-size: 12px;
                     display: inline-flex;
                     width: 100%;
@@ -107,307 +124,139 @@
             }
         }
     }
-    .center-box {
-        display: flex;
-        justify-content: space-between;
+
+    .todo-work {
         margin: 0 auto;
         margin-top: 15px;
-        .dynamic-item {
-            padding: 0 20px;
-            margin-bottom: 10px;
-        }
-        .calendar-box {
-            width: calc(60% - 150px);
-            border-radius: 4px;
-            background-color: #fff;
-            &-title {
-                width: 100%;
-                height: 40px;
-                line-height: 40px;
-                font-weight: var(--tiklab-font-weight-bold);
-                padding: 0 10px; 
-                display: flex;
-                justify-content: space-between;
-                .anticon-left {
-                    padding-right: 10px;
-                }
-                .anticon-right {
-                    padding-left: 10px;
-                }
-            }
-        }
-        .pending-workitem {
-            border-radius: 4px;
-            width: calc(40% - 180px);
-            background-color: #fff;
-            padding-bottom: 20px;
-            flex: 1;
-            &-title {
-                width: 100%;
-                height: 40px;
-                line-height: 40px;
-                font-weight: var(--tiklab-font-weight-bold);
-                padding: 0 20px; 
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                .more:hover{
-                    text-decoration:underline;
-                }
-                .more {
-                    color: var(--tiklab-blue);
-                    margin-left: 10px;
-                    cursor: pointer;
-                    display: flex;
-                    align-items: center;
-                }
-            }
-            &-list {
-                margin-top: 10px;
-                cursor: pointer;
-            }
-            .pending-workitem-item {
-                .pending-workitem-left {
-                    display: flex;
-                    align-items: center;
-                }
-                width: 100%;
-                padding: 0 20px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-bottom: 15px;
-                cursor: pointer;
-                .pending-workitem-name {
-                    width: 100px;
-                    overflow: hidden;
-                }
-                .pending-workitem-icon {
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 4px;
-                    margin-right: 10px;
-                }
-                .pending-workitem-process {
-                    width: 50px;
-                    text-align: center;
-                    
-                }
-                .name {
-                    color: var(--tiklab-blue);
-                    overflow: hidden;
-                    height: 40px;
-                    line-height: 40px;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                }
-                .name:hover {
-                    text-decoration: underline;
-                }
-                .pending-workitem-date {
-                    color: #999;
-                    font-size: 12px;
-                }
-            }
-        }
-    }
-    .foot-box {
-        display: flex;
-        justify-content: space-between;
-        margin: 0 auto;
-        margin: 15px auto;
-        .dynamic-box {
-            background-color: #fff;
-            border-radius: 4px;
-            flex: 1;
-            &-title {
-                width: 100%;
-                height: 40px;
-                line-height: 40px;
-                font-weight: var(--tiklab-font-weight-bold);
-                padding: 0 20px; 
-                display: flex;
-                justify-content: space-between;
-                .more:hover{
-                    text-decoration:underline;
-                }
-                .more {
-                    color: var(--tiklab-blue);
-                    margin-left: 10px;
-                    cursor: pointer;
-                    display: flex;
-                    align-items: center;
-                }
-            }
-            .dynamic-list {
-                margin-top: 10px;
-                padding-bottom: 20px;
-            }
-            
-            .dynamic-item {
-                padding: 0 20px 10px;
-                cursor: pointer;
-                .dynamic-item-left {
-                    display: flex;
-                    align-items: center;
-                }
-                .dynamic-icon {
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 4px;
-                    margin-right: 10px;
-                }
-                .dynamic-name {
-                    .name {
-                        color: var(--tiklab-blue);
-                    }
-                }
-                
-                .dynamic-date {
-                    color: #999;
-                    font-size: 12px;
-                }
-            }
-            .dynamic-list-bottom {
-                text-align: center;
-                font-size: 12px;
-                height: 40px;
-                line-height: 40px;
-                cursor: pointer;
-            }
-            .dynamic-list-bottom:hover {
-                color: var(---tiklab-blue);
+        padding: 0 10px 10px;
+        background-color: #fff;
+        border-radius: 4px;
+        padding-bottom: 20px;
+        flex: 1;
+
+        &-title {
+            width: 100%;
+            height: 40px;
+            line-height: 40px;
+            font-weight: var(--tiklab-font-weight-bold);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            .more:hover {
                 text-decoration: underline;
+            }
+
+            .more {
+                color: var(--tiklab-blue);
+                margin-left: 10px;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
             }
         }
 
-        .sprint-box {
-            background-color: #fff;
-            border-radius: 4px;
-            flex: 1;
-            &-title {
-                width: 100%;
-                height: 40px;
-                line-height: 40px;
-                font-weight: var(--tiklab-font-weight-bold);
-                padding: 0 10px; 
-                display: flex;
-                justify-content: space-between;
-                .more:hover{
-                    text-decoration:underline;
-                }
-                .more {
-                    color: var(--tiklab-blue);
-                    margin-left: 10px;
-                    cursor: pointer;
-                    display: flex;
-                    align-items: center;
-                }
-            }
-            .sprint-list {
-                margin-top: 10px;
-            }
-            .sprint-item {
-                .sprint-item-left {
-                    display: flex;
-                    align-items: center;
-                }
-                width: 100%;
-                padding: 0 20px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-bottom: 20px;
-                cursor: pointer;
-                .sprint-item-icon {
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 4px;
-                    margin-right: 10px;
-                }
-                .sprint-name {
-                    .name {
-                        color: var(--tiklab-blue);
-                        overflow: hidden;
-                        height: 40px;
-                        line-height: 40px;
-                        text-overflow: ellipsis;
-                        white-space: nowrap;
-                    }
-                    width: 80px;
-                }
-                .sprint-date {
-                    color: #999;
-                    font-size: 12px;
-                }
-            }
-        }
-        .info-box {
-            background-color: #fff;
-            border-radius: 4px;
-            flex: 1;
-            &-title {
-                width: 100%;
-                height: 40px;
-                line-height: 40px;
-                font-weight: var(--tiklab-font-weight-bold);
-                padding: 0 10px; 
-                display: flex;
-                justify-content: space-between;
-                .more:hover{
-                    text-decoration:underline;
-                }
-                .more {
-                    color: var(--tiklab-blue);
-                    margin-left: 10px;
-                    cursor: pointer;
-                    display: flex;
-                    align-items: center;
-                }
-            }
-            .info-list {
-                margin-top: 10px;
-                padding: 0 10px;
-            }
-            .info-item:hover {
-                background: #f7f7f7;
-            }
-            .info-item {
-                .info-item-left {
-                    display: flex;
-                    align-items: center;
-                }
-                width: 100%;
-                padding: 10px 10px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-bottom: 20px;
-                cursor: pointer;
-                .info-icon {
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 4px;
-                    margin-right: 10px;
-                }
-                .info-name {
-                    .name {
-                        color: var(--tiklab-blue)
-                    }
-                }
-                .info-content {
-                    width: 100px;
-                    overflow: hidden;
-                    height: 40px;
-                    line-height: 40px;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                }
-                .info-date {
-                    color: #999;
-                    font-size: 12px;
-                }
-            }
+        &-list {
+            margin-top: 10px;
+            cursor: pointer;
         }
     }
+
+    .recent-click {
+        margin: 0 auto;
+        margin-top: 15px;
+        padding: 0 10px 10px;
+        background-color: #fff;
+        border-radius: 4px;
+        padding-bottom: 20px;
+        flex: 1;
+        margin-bottom: 15px;
+        &-title {
+            width: 100%;
+            height: 40px;
+            line-height: 40px;
+            font-weight: var(--tiklab-font-weight-bold);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            .more:hover {
+                text-decoration: underline;
+            }
+
+            .more {
+                color: var(--tiklab-blue);
+                margin-left: 10px;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+            }
+        }
+
+        .project-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            .project-item-content {
+                .content-name {
+                    cursor: pointer;
+                    color: var(--tiklab-blue);
+                }
+                .content-type {
+                    font-size: 12px;
+                    color: var(--tiklab-gray-500);
+                }
+            }
+        }
+        .work-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            .work-content {
+                .content-name {
+                    cursor: pointer;
+                    color: var(--tiklab-blue);
+                }
+                .content-type {
+                    font-size: 12px;
+                    color: var(--tiklab-gray-500);
+                }
+            }
+        }
+
+        .version-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            .version-content {
+                .content-name {
+                    cursor: pointer;
+                    color: var(--tiklab-blue);
+                }
+                .content-type {
+                    font-size: 12px;
+                    color: var(--tiklab-gray-500);
+                }
+            }
+        }
+
+        .sprint-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            .sprint-content {
+                .content-name {
+                    cursor: pointer;
+                    color: var(--tiklab-blue);
+                }
+                .content-type {
+                    font-size: 12px;
+                    color: var(--tiklab-gray-500);
+                }
+            }
+        }
+        .item-time {
+            flex: 1;
+            text-align: right;
+        }
+    }
+
 }
