--- a/src/project/overview/components/Survey.scss
+++ b/src/project/overview/components/Survey.scss
@@ -52,6 +52,7 @@
         display: flex;
         justify-content: space-between;
         margin-bottom: 20px;
+
         .project-box {
             padding: 10px;
             background-color: #fff;
@@ -66,6 +67,7 @@
                 height: 40px;
                 line-height: 40px;
                 margin-bottom: 10px;
+
                 &-icon {
                     width: 30px;
                     height: 30px;
@@ -81,23 +83,32 @@
                 .project-item {
                     display: flex;
                     align-items: center;
-                    gap: 10px;
+                    gap: 5px;
                     margin-bottom: 10px;
+
                     .item-content {
-                        .item-top, .item-bottom {
+
+                        .item-top,
+                        .item-bottom {
                             height: 30px;
                             line-height: 30px;
                         }
+
                         .item-bottom {
                             color: var(--tiklab-gray-500);
                             font-size: 12px;
                         }
+
                         .item-progress {
                             width: 300px;
                             display: flex;
                             align-items: center;
                         }
                     }
+                }
+
+                .status-item {
+                    cursor: pointer;
                 }
 
                 .project-work {
@@ -116,9 +127,7 @@
 
             .burn-down {
                 width: calc(100% - 20px);
-                ;
                 height: calc(100% - 20px);
-                ;
             }
         }
 
@@ -223,120 +232,149 @@
         }
     }
 
-    .bottom-box {
-        margin-top: 20px;
-        display: flex;
-        justify-content: space-between;
+    .epic-box {
+        background-color: #fff;
+        border-radius: 4px;
 
-        .sprint-box {
-            background-color: #fff;
-            border-radius: 4px;
-            width: calc(50% - 10px);
-
-            &-title {
-                width: 100%;
-                height: 40px;
-                line-height: 40px;
-                font-weight: var(--tiklab-font-weight-bold);
-                padding: 0 10px;
-                display: flex;
-                justify-content: space-between;
-
-                .more {
-                    color: var(--tiklab-blue);
-                }
-            }
-
-            .sprint-list {
-                margin-top: 10px;
-            }
-
-            .sprint-item {
-                .sprint-item-left {
-                    display: flex;
-                    align-items: center;
-                }
-
-                .sprint-item-icon {
-                    width: 30px;
-                    height: 30px;
-                    margin-right: 10px;
-                }
-
-                width: 100%;
-                padding: 0 20px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-bottom: 20px;
-                cursor: pointer;
-
-                .sprint-icon {
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 4px;
-                    margin-right: 10px;
-                }
-
-                .sprint-name {
-                    .name {
-                        color: var(--tiklab-blue)
-                    }
-                }
-
-                .sprint-date {
-                    color: #999;
-                    font-size: 12px;
-                }
-            }
+        &-title {
+            height: 40px;
+            line-height: 40px;
+            padding-left: 10px;
+            font-weight: var(--tiklab-font-weight-bold);
         }
 
-        .epic-box {
-            background-color: #fff;
-            width: calc(50% - 10px);
-            border-radius: 4px;
+        &-timeline {
+            display: flex;
+            padding: 20px;
+            justify-content: center;
 
-            &-title {
-                height: 40px;
-                line-height: 40px;
-                padding-left: 10px;
-                font-weight: var(--tiklab-font-weight-bold);
-            }
+            .timeline-item {
+                text-align: center;
+                color: var(--tiklab-blue);
 
-            &-timeline {
-                display: flex;
-                padding: 20px;
-                justify-content: center;
+                .timeline-text {
+                    height: 40px;
+                    line-height: 40px;
+                }
 
-                .timeline-item {
-                    text-align: center;
-                    color: var(--tiklab-blue);
+                .timeline-center {
+                    display: flex;
+                    align-items: center;
 
-                    .timeline-text {
-                        height: 40px;
-                        line-height: 40px;
-                    }
-
-                    .timeline-center {
-                        display: flex;
-                        align-items: center;
-
-                        .time-point {
-                            &-icon {
-                                width: 20px;
-                                height: 20px;
-                                margin: 0 5px;
-                            }
+                    .time-point {
+                        &-icon {
+                            width: 20px;
+                            height: 20px;
+                            margin: 0 5px;
                         }
                     }
                 }
+            }
 
-                .time-line {
-                    width: 50px;
-                    height: 1px;
-                    background: #d7d7d7;
-                }
+            .time-line {
+                width: 50px;
+                height: 1px;
+                background: #d7d7d7;
             }
         }
     }
+
+    .recent-click {
+        margin: 0 auto;
+        margin-top: 15px;
+        padding: 0 10px 10px;
+        background-color: #fff;
+        border-radius: 4px;
+        padding-bottom: 20px;
+        flex: 1;
+        margin-bottom: 15px;
+        &-title {
+            width: 100%;
+            height: 40px;
+            line-height: 40px;
+            font-weight: var(--tiklab-font-weight-bold);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            .more:hover {
+                text-decoration: underline;
+            }
+
+            .more {
+                color: var(--tiklab-blue);
+                margin-left: 10px;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+            }
+        }
+
+        .project-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            .project-item-content {
+                .content-name {
+                    cursor: pointer;
+                    color: var(--tiklab-blue);
+                }
+                .content-type {
+                    font-size: 12px;
+                    color: var(--tiklab-gray-500);
+                }
+            }
+        }
+        .work-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            .work-content {
+                .content-name {
+                    cursor: pointer;
+                    color: var(--tiklab-blue);
+                }
+                .content-type {
+                    font-size: 12px;
+                    color: var(--tiklab-gray-500);
+                }
+            }
+        }
+
+        .version-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            .version-content {
+                .content-name {
+                    cursor: pointer;
+                    color: var(--tiklab-blue);
+                }
+                .content-type {
+                    font-size: 12px;
+                    color: var(--tiklab-gray-500);
+                }
+            }
+        }
+
+        .sprint-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            .sprint-content {
+                .content-name {
+                    cursor: pointer;
+                    color: var(--tiklab-blue);
+                }
+                .content-type {
+                    font-size: 12px;
+                    color: var(--tiklab-gray-500);
+                }
+            }
+        }
+        .item-time {
+            flex: 1;
+            text-align: right;
+        }
+    }
+
 }
