teamwire 集成 teston

--- a/src/project/test/components/TestRepository.scss
+++ b/src/project/test/components/TestRepository.scss
@@ -1,5 +1,5 @@
-.wiki-repository {
-    .wiki-repository-list {
+.test-repository {
+    .test-repository-list {
         padding: 15px;
     }
     .repository-delete {
