teamwire 集成 teston

--- a/src/project/wiki/components/WikiRepository.scss
+++ b/src/project/wiki/components/WikiRepository.scss
@@ -6,4 +6,8 @@
         color: var(--tiklab-blue);
         cursor: pointer;
     }
+    .repository-name {
+        color: var(--tiklab-blue);
+        cursor: pointer;
+    }
 }
