--- a/src/project/test/components/TestRepository.scss
+++ b/src/project/test/components/TestRepository.scss
@@ -6,4 +6,8 @@
         color: var(--tiklab-blue);
         cursor: pointer;
     }
+    .repository-title {
+        color: var(--tiklab-blue);
+        cursor: pointer;
+    }
 }
