修改插件加载方式

--- a/src/projectSet/statistics/components/ProjectSetStatistics.scss
+++ b/src/projectSet/statistics/components/ProjectSetStatistics.scss
@@ -5,7 +5,9 @@
     .projectSet-statistics-content {
         height: 100%;
         overflow: auto;
-
+        .ant-row {
+            height: 100%;
+        }
         .statistics-work-top {
             position: sticky;
             top: 0;
