--- a/src/sprint/statistics/components/SprintStatistics.scss
+++ b/src/sprint/statistics/components/SprintStatistics.scss
@@ -5,7 +5,9 @@
     .porject-statistics-content {
         height: 100%;
         overflow: auto;
-
+        .ant-row {
+            height: 100%;
+        }
         .statistics-work-top {
             position: sticky;
             top: 0;
