--- a/src/project/project/components/Project.scss
+++ b/src/project/project/components/Project.scss
@@ -65,7 +65,7 @@
         height: 16px;
     }
     
-    .table-box {
+    .project-table-box {
         margin-top: 0;
     }
     .project-filter {
@@ -175,7 +175,7 @@
                 padding: 20px 20px;
             }
         }
-        .table-box {
+        .project-table-box {
             .project-name {
                 display: flex;
                 align-items: center;
