--- a/src/projectSet/projectList/components/ProjectSetProjectList.scss
+++ b/src/projectSet/projectList/components/ProjectSetProjectList.scss
@@ -12,7 +12,7 @@
         }
     }
 
-    .table-box {
+    .projectSet-table-box {
         .project-name {
             display: flex;
             align-items: center;
