--- a/src/projectSet/projectSet/components/ProjectSet.scss
+++ b/src/projectSet/projectSet/components/ProjectSet.scss
@@ -6,7 +6,7 @@
         justify-content: space-between;
         align-items: center;
     }
-    .table-box {
+    .projectSet-table-box {
         margin-top: 0;
         .projectSet-action-icon {
             cursor: pointer;
