--- a/src/home/insight/components/InsightList.scss
+++ b/src/home/insight/components/InsightList.scss
@@ -18,7 +18,7 @@
         display: flex;
         justify-content: space-between;
     }
-    .table-box {
+    .insight-table-box {
         margin-top: 0;
     }
     .insight-tabs {
