去掉多余引用

--- a/src/setting/common/components/Orga.scss
+++ b/src/setting/common/components/Orga.scss
@@ -12,7 +12,7 @@
     .orga-aside {
         height: 100%;
         background-color: var(--tiklab-gray);
-        padding-top: 20px;
+        // padding-top: 20px;
         .orga-aside-top {
         height: calc(100vh - 90px);
            overflow: auto;
